sortable tables/mw-collapsible no longer causes page jump
Relatively straightforwardly - we move padding-right definition into
top styles to avoid a reflow

This turned out to be a little tricker than first imagined.
The code in jquery.makeCollapsible.js finds elements marked up
as collapsible and then 1) collapses them 2) inserts a toggle button.

To avoid a reflow on the page, we have to make sure the collapsed content
is collapsed prior to the code running and reserve space for the toggle
button.

The toggle button is tricky as it is subject to i18n. However we can
access this label via a LESS variable and use a pseudo element (which
is supported by the majority of modern browsers) to preserve the space
we need. When the JavaScript has loaded there is no need for that CSS
any more.

Note on slow connections, collapsed content will not be accessible until
the JavaScript has fully loaded, however this is arguably less of a problem
then the existing reflows.

Note, there are many many many usages of mw-collapsible, because of this
this does not claim to address all reflows in all usages - but it does provide
support for the more widespread usages.

Bug: T42792
Bug: T42812

--- a/resources/src/jquery/jquery.tablesorter.less
+++ b/resources/src/jquery/jquery.tablesorter.less
@@ -8,7 +8,7 @@ table.jquery-tablesorter {
 		cursor: pointer;
 		background-repeat: no-repeat;
 		background-position: center right;
-		padding-right: 21px;
+		// Node padding is set in mediawiki.jquery.styles to avoid reflows
 	}
 
 	th.headerSortUp {
